<resources>
    <string name="app_name">CustomScrollView Demos</string>
    <string name="parallax_scroll_views">Parallax ScrollViews</string>
    <string name="pinned_header_scroll_view">Pinned Header ScrollView</string>
    <string name="max_scroll_scroll_view">Max Scroll ScrollView</string>
    <string name="locked_scroll_views">Locked ScrollViews</string>
    <string name="synced_touch_scroll_views">Synced-Touch ScrollViews</string>
    <string name="locked_list_views">Locked ListViews</string>
    <string name="scroll_view_2_d">Two-Dimensional ScrollView</string>
    <string name="complex_scroll_view_2_d">Complex Two-Dimensional ScrollView</string>
    <string name="list_view_2_d">Two-Dimensional ListView</string>
    <string name="scroll_left_to_top">Scroll left column to top</string>
    <string name="smooth_scroll_left_to_top">Smooth scroll left to top</string>
    <string name="smooth_scroll_by_offset">Smooth scroll by offset</string>
    <string name="set_left_selection">Set left selection</string>
    <string name="set_left_selection_from_top">Set left selection from top</string>
    <string name="enabled">Enabled</string>
    <string name="about">
        This widget hosts two SyncedScrollView children. It has an optional parameter to set a scroll
        factor, which will in turn cause the opposing SyncedScrollView to be scrolled at a different rate. This widget can be very useful
        for synchronized scrolling of two SyncedScrollView children, or for parallax-style scrolling in a over-under fashion.
    </string>
    <string name="about_locked_col1">
        These two ScrollViews are synced and locked. Clicking the button causes the left column to scroll to the top, and the right column
        mimics the position.
    </string>
    <string name="about_locked_col2">
        They scroll at the same rate. They lock to the position of each other. There is extra text in this column to illustrate how the
        views lock.
    </string>
    <string name="about_synced_col1">
        These two ScrollViews are synced and unlocked. They scroll based on the difference in scrolling of the opposing view, _not_ the
        position of the opposing view.
    </string>
    <string name="about_synced_col2">
        They scroll at the same rate. They do not lock to the position of each other.
    </string>
    <string name="about_unsynced_col1">
        These two ScrollViews are unsynced and unlocked. They scroll based on the difference in scrolling of the opposing view, _not_ the
        position of the opposing view.
    </string>
    <string name="about_unsynced_col2">
        The right ScrollView scrolls at 3x the rate of the left one. They do not lock to the position of each other.
    </string>
    <string name="about_synced_touch_col1">
        These two ScrollViews are synced via onMotionEvent() and unlocked. They use equivalent MotionEvents. This makes it possible for the
        receiving ScrollView to continue to scroll even when the dispatching ScrollView is already at the top or bottom.
    </string>
    <string name="about_synced_touch_col2">
        They scroll only based on the MotionEvents triggered by the opposing ScrollView. They do not lock to the position of each other.
    </string>
    <string name="additional_info">Additional Info</string>
    <string name="lorem_spaced_new_line">Lorem\nipsum\ndolor\nsit\namet\n...</string>
    <string name="lorem_para1">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam urna metus, tincidunt in volutpat et, condimentum id neque. Nunc
        molestie aliquet malesuada. Nullam et massa faucibus lectus dignissim dictum quis eget est. Sed elit lorem, volutpat in condimentum
        quis, feugiat ut sapien. Curabitur in ultrices odio. Fusce leo orci, dictum ut varius non, faucibus a est. Cum sociis natoque
        penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Sed sit amet facilisis justo.
    </string>
    <string name="lorem_para2">
        Etiam porttitor lectus in justo interdum sed condimentum nisl viverra. Phasellus mi massa, congue ut porttitor et, aliquam id
        tortor. Integer nunc sem, convallis vel congue ac, vehicula at orci. Pellentesque eget mi tortor, id blandit turpis. Suspendisse
        lobortis, mi quis hendrerit vehicula, libero erat accumsan tortor, sed imperdiet ligula nunc eget orci. Sed auctor accumsan quam, ut
        bibendum dolor tempus non. Mauris ultricies dolor vel neque accumsan a consequat lorem pharetra. Donec eget mauris non libero dictum
        sodales vitae id libero. Proin bibendum eleifend lacus quis aliquam. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. Donec quis tortor non enim accumsan pretium ut non eros. Suspendisse faucibus justo viverra diam
        commodo viverra. Duis cursus nulla a quam feugiat laoreet. Morbi convallis dignissim est eu aliquet.
    </string>
    <string name="lorem_para3">
        Vivamus sagittis, nisi ut porta feugiat, ante ipsum dapibus erat, ac semper nunc felis eu tortor. Morbi ullamcorper facilisis
        malesuada. Donec nisi leo, auctor in congue quis, aliquam sit amet orci. Curabitur libero quam, sollicitudin eget pretium quis,
        gravida nec dolor. Aenean tempor, nibh vitae adipiscing eleifend, dolor lacus lacinia sem, non auctor orci magna at nibh. In vel
        velit est, a condimentum tortor. Aliquam dui ante, porta non rhoncus eu, elementum sollicitudin nulla. Nam quis varius tellus.
        Vestibulum ante ipsum, elementum et rutrum a, euismod id dolor. Duis sed faucibus mi. Sed diam elit, fringilla in interdum id,
        pulvinar sit amet dui.
    </string>
    <string name="lorem_para4">
        Integer accumsan dictum sollicitudin. Nullam pulvinar elementum felis faucibus varius. Nunc imperdiet metus sit amet velit tempor
        dictum. Nulla porttitor odio quis erat congue lobortis. Cras vehicula rhoncus placerat. Cras malesuada nulla ac libero cursus
        rhoncus ultricies nisl venenatis. Proin eu odio elit, sagittis ornare dolor. Etiam accumsan diam a libero scelerisque dignissim eget
        sit amet nulla.
    </string>
    <string name="lorem_para5">
        Suspendisse aliquet ullamcorper faucibus. Proin id est dolor, vel semper arcu. Morbi felis risus, aliquet varius vehicula eu,
        faucibus at mi. Nunc nunc tellus, luctus eget lobortis nec, accumsan ac sem. Proin mauris mi, condimentum a convallis sed, aliquet
        sed tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla elementum interdum orci et
        fermentum.
    </string>
    <string-array name="string_array_1">
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Indigo</item>
        <item>Violet</item>
        <item>Black</item>
        <item>White</item>
        <item>Periwinkle</item>
        <item>Magenta</item>
        <item>Chartreuse</item>
        <item>Neon Yellow</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Cornflower Blue</item>
    </string-array>
    <string-array name="string_array_2">
        <item>Lorem</item>
        <item>ipsum</item>
        <item>dolor</item>
        <item>amet</item>
        <item>consectetur</item>
        <item>adipiscing</item>
        <item>elit</item>
        <item>Nullam</item>
        <item>urna</item>
        <item>metus</item>
        <item>tincidunt</item>
        <item>in</item>
        <item>volutpat</item>
        <item>et</item>
        <item>condimentum</item>
        <item>id</item>
        <item>neque</item>
        <item>Nunc</item>
        <item>molestie</item>
        <item>aliquet</item>
        <item>malesuada</item>
        <item>Nullam</item>
        <item>et</item>
        <item>massa</item>
        <item>faucibus</item>
        <item>lectus</item>
        <item>dignissim</item>
        <item>dictum</item>
        <item>quis</item>
        <item>eget</item>
        <item>est</item>
        <item>Sed</item>
        <item>elit</item>
        <item>lorem</item>
        <item>volutpat</item>
        <item>in</item>
        <item>condimentum</item>
    </string-array>
    <string name="lorem_ipsum_5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent consectetur urna vitae odio consequat sed
        aliquet metus consectetur. Nullam ligula mi, tincidunt ac gravida non, elementum at magna. Nam elementum arcu quis metus porttitor a
        pharetra tellus semper. Sed neque arcu, suscipit a ornare vitae, vestibulum eu tortor. Vivamus facilisis, arcu id sollicitudin
        venenatis, dui neque interdum diam, sit amet vulputate sapien orci sit amet arcu. Nam in massa et enim dapibus interdum eget ut
        lectus. Nam sed lectus ligula. Pellentesque viverra luctus ligula, a mattis massa malesuada in. Morbi ipsum eros, placerat viverra
        posuere ac, lobortis a metus.

        Aenean enim tellus, vulputate at ullamcorper quis, ultrices et orci. Nullam quis diam ipsum, vitae congue nisi. Maecenas commodo
        felis eget sem condimentum ullamcorper et vitae nisi. Donec ac mi libero, ac vulputate orci. Mauris fermentum placerat nisi, ut
        iaculis est malesuada quis. Maecenas dui leo, rhoncus non elementum eu, laoreet non turpis. Suspendisse potenti. Curabitur tristique
        porta elit at convallis. Aliquam fringilla turpis vestibulum magna tempus adipiscing. Cras lobortis dolor eget augue vestibulum
        varius.

        Integer dictum risus sit amet urna ultricies eget pellentesque magna ultricies. Ut feugiat porttitor posuere. Morbi a risus non est
        faucibus sagittis nec eget sapien. Nullam congue vehicula magna, sit amet posuere velit egestas sed. Fusce in magna erat. Sed at mi
        eget mi imperdiet ultrices quis nec urna. Suspendisse in diam non magna luctus tincidunt pellentesque semper tellus. Curabitur eget
        turpis erat, vitae tincidunt massa. Integer non ante sed nisl euismod luctus in semper urna. Pellentesque dictum hendrerit libero
        rhoncus accumsan. Etiam aliquet posuere ante. Nam aliquam auctor tellus non suscipit.

        Ut accumsan posuere orci, sed ultricies massa fermentum congue. Vestibulum dolor justo, dignissim vehicula eleifend sit amet,
        ullamcorper eget lectus. Morbi ac dui a risus semper convallis. Suspendisse vitae augue sit amet risus varius cursus vel a velit.
        Aliquam ac auctor justo. Proin nisi quam, ultrices eget lobortis eu, consectetur in orci. Donec urna eros, suscipit sed gravida
        eget, hendrerit eget quam. Fusce velit tortor, convallis at dapibus non, pharetra id sapien. Fusce ut metus libero, id adipiscing
        nibh. Donec eget lorem enim. Nam eu sapien ut lorem imperdiet viverra. Nullam at orci at metus suscipit egestas. Vivamus fringilla
        pretium neque sagittis sagittis. Ut velit ante, venenatis vel dictum et, sodales interdum justo.

        Proin quam lorem, feugiat et adipiscing id, tempor vitae lorem. Nulla ac gravida est. Suspendisse tincidunt accumsan leo ac
        placerat. Etiam sagittis, dui vel volutpat pretium, lacus tortor porta orci, in posuere libero neque in libero. Maecenas id aliquam
        nisi. Suspendisse diam erat, dapibus eu malesuada in, eleifend quis ipsum. Morbi tempor porttitor ipsum at congue. Nunc pretium,
        massa non tincidunt pulvinar, leo nisl venenatis felis, at tristique ligula dui a mi. Nam dignissim lacus justo. Cum sociis natoque
        penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi odio ante, porttitor at fringilla tristique, tristique vel
        magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam sed molestie quam. Aenean
        quis diam justo, bibendum vulputate purus.
    </string>
</resources>