<?xml version="1.0" encoding="utf-8"?>
<com.doomonafireball.customscrollviews.widget.SyncedScrollView
        style="@style/FillWidth"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:csv="http://schemas.android.com/apk/res/com.doomonafireball.customscrollviews"
        android:fillViewport="true"
        csv:dispatchScroll="true"
        csv:dispatchTouch="false"
        csv:receiveScroll="false"
        csv:receiveTouch="true">
    <LinearLayout
            style="@style/FillWidth"
            android:orientation="vertical">
        <TextView
                style="@style/TextViewDemo"
                android:tag="sticky-hastransparency"
                android:text="HEADER"/>
        <TextView
                style="@style/TextViewDemo"
                android:text="@string/lorem_para1"/>
        <TextView
                style="@style/TextViewDemo"
                android:tag="sticky-hastransparency"
                android:text="HEADER2"/>
        <TextView
                style="@style/TextViewDemo"
                android:text="@string/lorem_para2"/>
        <TextView
                style="@style/TextViewDemo"
                android:tag="sticky-hastransparency"
                android:text="HEADER3"/>
        <TextView
                style="@style/TextViewDemo"
                android:text="@string/lorem_para3"/>
        <TextView
                style="@style/TextViewDemo"
                android:tag="sticky-hastransparency"
                android:text="HEADER4"/>
        <TextView
                style="@style/TextViewDemo"
                android:text="@string/lorem_para4"/>
        <TextView
                style="@style/TextViewDemo"
                android:tag="sticky-hastransparency"
                android:text="HEADER5"/>
        <TextView
                style="@style/TextViewDemo"
                android:text="@string/lorem_ipsum_5"/>
    </LinearLayout>
</com.doomonafireball.customscrollviews.widget.SyncedScrollView>
