<?xml version="1.0" encoding="utf-8"?>
<com.doomonafireball.customscrollviews.widget.SyncedScrollContainer
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ssv="http://schemas.android.com/apk/res/com.doomonafireball.customscrollviews"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    ssv:overScrollViewId="@+id/SVover"
    ssv:underScrollViewId="@+id/SVunder"
    ssv:scrollFactor="0.4"
    ssv:lockScrolling="true">
    <com.doomonafireball.customscrollviews.widget.SyncedScrollView
        android:id="@id/SVunder"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/UnderTV"
                android:text="@string/lorem_spaced_new_line"/>
            <TextView
                style="@style/UnderTV"
                android:text="@string/lorem_spaced_new_line"/>
            <TextView
                style="@style/UnderTV"
                android:text="@string/lorem_spaced_new_line"/>
            <TextView
                style="@style/UnderTV"
                android:text="@string/lorem_spaced_new_line"/>
            <TextView
                style="@style/UnderTV"
                android:text="@string/lorem_spaced_new_line"/>
            <TextView
                style="@style/UnderTV"
                android:text="@string/lorem_spaced_new_line"/>
        </LinearLayout>
    </com.doomonafireball.customscrollviews.widget.SyncedScrollView>
    <com.doomonafireball.customscrollviews.widget.SyncedScrollView
        android:id="@id/SVover"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/parallax_scroll_views"
                    android:textSize="20dp"
                    android:padding="20dp"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textSize="14dp"
                    android:padding="10dp"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:background="#33ffffff"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/additional_info"
                    android:textSize="20dp"
                    android:padding="20dp"/>
                <TextView
                    style="@style/OverTV"
                    android:text="@string/lorem_para1"
                    />
                <TextView
                    style="@style/OverTV"
                    android:text="@string/lorem_para2"
                    />
                <TextView
                    style="@style/OverTV"
                    android:text="@string/lorem_para3"
                    />
                <TextView
                    style="@style/OverTV"
                    android:text="@string/lorem_para4"
                    />
                <TextView
                    style="@style/OverTV"
                    android:text="@string/lorem_para5"
                    />
            </LinearLayout>
        </LinearLayout>
    </com.doomonafireball.customscrollviews.widget.SyncedScrollView>
</com.doomonafireball.customscrollviews.widget.SyncedScrollContainer>