<?xml version="1.0" encoding="utf-8"?>
<com.doomonafireball.customscrollviews.widget.SyncedScrollContainer
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ssv="http://schemas.android.com/apk/res/com.doomonafireball.customscrollviews"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    ssv:overScrollViewId="@+id/SVleft"
    ssv:underScrollViewId="@+id/SVright"
    ssv:scrollFactor="1.0"
    ssv:lockScrolling="true"
    ssv:syncScroll="true"
    ssv:syncTouch="false">
    <Button
        android:id="@+id/BTN_scroll_left_to_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_left_to_top"/>
    <LinearLayout
        android:id="@+id/LL_checkboxes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/BTN_scroll_left_to_top"
        android:weightSum="1.0"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/CB_lock1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/enabled"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/CB_lock2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/enabled"
            android:checked="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/LL_checkboxes"
        android:weightSum="1.0"
        android:orientation="horizontal">
        <com.doomonafireball.customscrollviews.widget.SyncedScrollView
            android:id="@id/SVleft"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:fillViewport="true"
            android:overScrollMode="never">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/about_locked_col1"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para1"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para2"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para3"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para4"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para5"/>
            </LinearLayout>
        </com.doomonafireball.customscrollviews.widget.SyncedScrollView>
        <com.doomonafireball.customscrollviews.widget.SyncedScrollView
            android:id="@id/SVright"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:fillViewport="true"
            android:overScrollMode="never"
            ssv:dispatchScroll="false"
            ssv:dispatchTouch="false">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/about_locked_col2"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para1"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para2"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para3"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para4"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para5"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para1"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para2"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para3"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para4"/>
                <TextView
                    style="@style/ScrollTV"
                    android:text="@string/lorem_para5"/>
            </LinearLayout>
        </com.doomonafireball.customscrollviews.widget.SyncedScrollView>
    </LinearLayout>
</com.doomonafireball.customscrollviews.widget.SyncedScrollContainer>