<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        style="@style/Fill"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:csv="http://schemas.android.com/apk/res/com.doomonafireball.customscrollviews">
    <com.doomonafireball.customscrollviews.widget.SyncedScrollView
            style="@style/FillWidth"
            android:id="@+id/SSV_left"
            android:layout_weight="1.0"
            android:fillViewport="true"
            csv:dispatchScroll="false"
            csv:dispatchTouch="true"
            csv:receiveScroll="false"
            csv:receiveTouch="true">
        <LinearLayout
                style="@style/FillWidth"
                android:orientation="vertical">
            <TextView
                    style="@style/TextViewDemo"
                    android:text="@string/lorem_para1"/>
            <View
                    style="@style/FillWidth"
                    android:layout_height="100dp"
                    android:background="@color/transparent"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:text="@string/lorem_para2"/>
            <View
                    style="@style/FillWidth"
                    android:layout_height="100dp"
                    android:background="@color/transparent"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:text="@string/lorem_para3"/>
            <View
                    style="@style/FillWidth"
                    android:layout_height="100dp"
                    android:background="@color/transparent"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:text="@string/lorem_para4"/>
        </LinearLayout>
    </com.doomonafireball.customscrollviews.widget.SyncedScrollView>
    <com.doomonafireball.customscrollviews.widget.SyncedScrollView
            style="@style/FillWidth"
            android:id="@+id/SSV_right"
            android:layout_weight="1.0"
            android:fillViewport="true"
            csv:dispatchScroll="false"
            csv:dispatchTouch="true"
            csv:receiveScroll="false"
            csv:receiveTouch="true">
        <LinearLayout
                style="@style/FillWidth"
                android:orientation="vertical">
            <TextView
                    style="@style/TextViewDemo"
                    android:tag="sticky-hastransparency"
                    android:text="HEADER"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:text="@string/lorem_para1"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:tag="sticky-hastransparency"
                    android:text="HEADER2"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:text="@string/lorem_para2"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:tag="sticky-hastransparency"
                    android:text="HEADER3"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:text="@string/lorem_para3"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:tag="sticky-hastransparency"
                    android:text="HEADER4"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:text="@string/lorem_para4"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:tag="sticky-hastransparency"
                    android:text="HEADER5"/>
            <TextView
                    style="@style/TextViewDemo"
                    android:text="@string/lorem_ipsum_5"/>
        </LinearLayout>
    </com.doomonafireball.customscrollviews.widget.SyncedScrollView>
</LinearLayout>