<?xml version="1.0" encoding="utf-8"?>
<com.doomonafireball.customscrollviews.widget.SyncedListContainer
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ssv="http://schemas.android.com/apk/res/com.doomonafireball.customscrollviews"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    ssv:overListViewId="@+id/LV_left"
    ssv:underListViewId="@+id/LV_right"
    ssv:scrollFactor="1.0"
    ssv:lockScrolling="true">
    <LinearLayout
        android:id="@+id/LL_buttons1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:orientation="horizontal">
        <Button
            android:id="@+id/BTN_smooth_scroll_left_to_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/smooth_scroll_left_to_top"/>
        <Button
            android:id="@+id/BTN_smooth_scroll_by_offset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/smooth_scroll_by_offset"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_buttons2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_buttons1"
        android:weightSum="1.0"
        android:orientation="horizontal">
        <Button
            android:id="@+id/BTN_set_left_selection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/set_left_selection"/>
        <Button
            android:id="@+id/BTN_set_left_selection_from_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/set_left_selection_from_top"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_checkboxes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL_buttons2"
        android:weightSum="1.0"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/CB_lock1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/enabled"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/CB_lock2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/enabled"
            android:checked="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/LL_checkboxes"
        android:weightSum="1.0"
        android:orientation="horizontal">
        <com.doomonafireball.customscrollviews.widget.SyncedListView
            android:id="@id/LV_left"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:fillViewport="true"
            android:overScrollMode="never"/>
        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">
            <com.doomonafireball.customscrollviews.widget.SyncedListView
                android:id="@id/LV_right"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:fillViewport="true"
                android:overScrollMode="never"
                ssv:dispatchTouch="false"/>
        </HorizontalScrollView>
    </LinearLayout>
</com.doomonafireball.customscrollviews.widget.SyncedListContainer>